// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Brokers Component Brokers Empty matches Brokers Empty snapshot 1`] = `
<StaticRouter
  context={Object {}}
  location={
    Object {
      "pathname": "ui/clusters/local/brokers",
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "ui/clusters/local/brokers",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    staticContext={Object {}}
  >
    <Component
      theme={
        Object {
          "buttonStyles": Object {
            "fontSize": Object {
              "L": "16px",
              "M": "14px",
              "S": "14px",
            },
            "height": Object {
              "L": "40px",
              "M": "32px",
              "S": "24px",
            },
            "primary": Object {
              "backgroundColor": Object {
                "active": "#1414B8",
                "hover": "#1717CF",
                "normal": "#4F4FFF",
              },
              "color": "#FFFFFF",
              "invertedColors": Object {
                "active": "#1414B8",
                "hover": "#1717CF",
                "normal": "#4F4FFF",
              },
            },
            "secondary": Object {
              "backgroundColor": Object {
                "active": "#D5DADD",
                "hover": "#E3E6E8",
                "normal": "#F1F2F3",
              },
              "color": "#171A1C",
              "invertedColors": Object {
                "active": "#171A1C",
                "hover": "#454F54",
                "normal": "#73848C",
              },
            },
          },
          "liStyles": Object {
            "primary": Object {
              "backgroundColor": Object {
                "active": "#E3E6E8",
                "hover": "#F1F2F3",
                "normal": "#FFFFFF",
              },
              "color": Object {
                "active": "#171A1C",
                "hover": "#F1F2F3",
                "normal": "#73848C",
              },
            },
          },
          "secondaryTabStyles": Object {
            "backgroundColor": Object {
              "active": "#E3E6E8",
              "hover": "#F1F2F3",
              "normal": "#FFFFFF",
            },
            "color": Object {
              "active": "#171A1C",
              "hover": "#171A1C",
              "normal": "#73848C",
            },
          },
          "selectStyles": Object {
            "borderColor": Object {
              "active": "#454F54",
              "disabled": "#E3E6E8",
              "hover": "#73848C",
              "normal": "#ABB5BA",
            },
            "color": Object {
              "active": "#171A1C",
              "disabled": "#ABB5BA",
              "hover": "#171A1C",
              "normal": "#171A1C",
            },
          },
          "tagStyles": Object {
            "backgroundColor": Object {
              "gray": "#E3E6E8",
              "green": "#D6F5E0",
              "yellow": "#FFEECC",
            },
            "color": "#171A1C",
          },
          "thStyles": Object {
            "backgroundColor": Object {
              "normal": "#FFFFFF",
            },
            "color": Object {
              "normal": "#73848C",
            },
            "previewColor": Object {
              "normal": "#4F4FFF",
            },
          },
        }
      }
    >
      <Brokers
        activeControllers={0}
        brokerCount={0}
        fetchBrokers={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        fetchClusterStats={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        inSyncReplicasCount={0}
        isFetched={false}
        offlinePartitionCount={0}
        onlinePartitionCount={0}
        outOfSyncReplicasCount={0}
        underReplicatedPartitionCount={0}
        version="1"
        zooKeeperStatus={0}
      >
        <div
          className="section"
        >
          <div
            className="metrics-box mb-2 is-flex"
          >
            <Styled(MetricsWrapper)
              title="Uptime"
            >
              <MetricsWrapper
                className="sc-bdfBQB ewAWCQ"
                title="Uptime"
              >
                <div
                  className="sc-bdfBQB ewAWCQ"
                >
                  <h5
                    className="is-7 has-text-weight-medium mb-2"
                  >
                    Uptime
                  </h5>
                  <div
                    className="indicatorsWrapper"
                  >
                    <Styled(Indicator)
                      label="Total Brokers"
                    >
                      <Indicator
                        className="sc-gsTEea fGiIVV"
                        label="Total Brokers"
                      >
                        <div
                          className="sc-gsTEea fGiIVV"
                        >
                          <div>
                            <p
                              className="is-size-8"
                            >
                              Total Brokers
                            </p>
                            0
                          </div>
                        </div>
                      </Indicator>
                    </Styled(Indicator)>
                    <Styled(Indicator)
                      label="Active Controllers"
                    >
                      <Indicator
                        className="sc-gsTEea fGiIVV"
                        label="Active Controllers"
                      >
                        <div
                          className="sc-gsTEea fGiIVV"
                        >
                          <div>
                            <p
                              className="is-size-8"
                            >
                              Active Controllers
                            </p>
                            0
                          </div>
                        </div>
                      </Indicator>
                    </Styled(Indicator)>
                    <Styled(Indicator)
                      label="Zookeeper Status"
                    >
                      <Indicator
                        className="sc-gsTEea fGiIVV"
                        label="Zookeeper Status"
                      >
                        <div
                          className="sc-gsTEea fGiIVV"
                        >
                          <div>
                            <p
                              className="is-size-8"
                            >
                              Zookeeper Status
                            </p>
                            <Styled(Tag)
                              color="gray"
                              text="offline"
                            >
                              <Tag
                                className="sc-dlfnuX gBFAcb"
                                color="gray"
                                text="offline"
                              >
                                <p
                                  className="sc-dlfnuX gBFAcb"
                                >
                                  offline
                                </p>
                              </Tag>
                            </Styled(Tag)>
                          </div>
                        </div>
                      </Indicator>
                    </Styled(Indicator)>
                    <Styled(Indicator)
                      label="Version"
                    >
                      <Indicator
                        className="sc-gsTEea fGiIVV"
                        label="Version"
                      >
                        <div
                          className="sc-gsTEea fGiIVV"
                        >
                          <div>
                            <p
                              className="is-size-8"
                            >
                              Version
                            </p>
                            1
                          </div>
                        </div>
                      </Indicator>
                    </Styled(Indicator)>
                  </div>
                </div>
              </MetricsWrapper>
            </Styled(MetricsWrapper)>
            <Styled(MetricsWrapper)
              title="Partitions"
            >
              <MetricsWrapper
                className="sc-bdfBQB ewAWCQ"
                title="Partitions"
              >
                <div
                  className="sc-bdfBQB ewAWCQ"
                >
                  <h5
                    className="is-7 has-text-weight-medium mb-2"
                  >
                    Partitions
                  </h5>
                  <div
                    className="indicatorsWrapper"
                  >
                    <Styled(Indicator)
                      label="Online"
                    >
                      <Indicator
                        className="sc-gsTEea fGiIVV"
                        label="Online"
                      >
                        <div
                          className="sc-gsTEea fGiIVV"
                        >
                          <div>
                            <p
                              className="is-size-8"
                            >
                              Online
                            </p>
                            <span
                              className=""
                            >
                              0
                            </span>
                            <span
                              className="has-text-weight-light"
                            >
                               
                              of 
                              0
                            </span>
                          </div>
                        </div>
                      </Indicator>
                    </Styled(Indicator)>
                    <Styled(Indicator)
                      label="URP"
                      title="Under replicated partitions"
                    >
                      <Indicator
                        className="sc-gsTEea fGiIVV"
                        label="URP"
                        title="Under replicated partitions"
                      >
                        <div
                          className="sc-gsTEea fGiIVV"
                        >
                          <div
                            title="Under replicated partitions"
                          >
                            <p
                              className="is-size-8"
                            >
                              URP
                            </p>
                            0
                          </div>
                        </div>
                      </Indicator>
                    </Styled(Indicator)>
                    <Styled(Indicator)
                      label="In Sync Replicas"
                    >
                      <Indicator
                        className="sc-gsTEea fGiIVV"
                        label="In Sync Replicas"
                      >
                        <div
                          className="sc-gsTEea fGiIVV"
                        >
                          <div>
                            <p
                              className="is-size-8"
                            >
                              In Sync Replicas
                            </p>
                            0
                          </div>
                        </div>
                      </Indicator>
                    </Styled(Indicator)>
                    <Styled(Indicator)
                      label="Out of Sync Replicas"
                    >
                      <Indicator
                        className="sc-gsTEea fGiIVV"
                        label="Out of Sync Replicas"
                      >
                        <div
                          className="sc-gsTEea fGiIVV"
                        >
                          <div>
                            <p
                              className="is-size-8"
                            >
                              Out of Sync Replicas
                            </p>
                            0
                          </div>
                        </div>
                      </Indicator>
                    </Styled(Indicator)>
                  </div>
                </div>
              </MetricsWrapper>
            </Styled(MetricsWrapper)>
          </div>
        </div>
        <table
          className="table is-fullwidth"
        >
          <thead>
            <tr>
              <th>
                Broker
              </th>
              <th>
                Segment size (Mb)
              </th>
              <th>
                Segment Count
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </Brokers>
    </Component>
  </Router>
</StaticRouter>
`;

exports[`Brokers Component Brokers matches snapshot 1`] = `
<StaticRouter
  context={Object {}}
  location={
    Object {
      "pathname": "ui/clusters/local/brokers",
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "ui/clusters/local/brokers",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    staticContext={Object {}}
  >
    <Component
      theme={
        Object {
          "buttonStyles": Object {
            "fontSize": Object {
              "L": "16px",
              "M": "14px",
              "S": "14px",
            },
            "height": Object {
              "L": "40px",
              "M": "32px",
              "S": "24px",
            },
            "primary": Object {
              "backgroundColor": Object {
                "active": "#1414B8",
                "hover": "#1717CF",
                "normal": "#4F4FFF",
              },
              "color": "#FFFFFF",
              "invertedColors": Object {
                "active": "#1414B8",
                "hover": "#1717CF",
                "normal": "#4F4FFF",
              },
            },
            "secondary": Object {
              "backgroundColor": Object {
                "active": "#D5DADD",
                "hover": "#E3E6E8",
                "normal": "#F1F2F3",
              },
              "color": "#171A1C",
              "invertedColors": Object {
                "active": "#171A1C",
                "hover": "#454F54",
                "normal": "#73848C",
              },
            },
          },
          "liStyles": Object {
            "primary": Object {
              "backgroundColor": Object {
                "active": "#E3E6E8",
                "hover": "#F1F2F3",
                "normal": "#FFFFFF",
              },
              "color": Object {
                "active": "#171A1C",
                "hover": "#F1F2F3",
                "normal": "#73848C",
              },
            },
          },
          "secondaryTabStyles": Object {
            "backgroundColor": Object {
              "active": "#E3E6E8",
              "hover": "#F1F2F3",
              "normal": "#FFFFFF",
            },
            "color": Object {
              "active": "#171A1C",
              "hover": "#171A1C",
              "normal": "#73848C",
            },
          },
          "selectStyles": Object {
            "borderColor": Object {
              "active": "#454F54",
              "disabled": "#E3E6E8",
              "hover": "#73848C",
              "normal": "#ABB5BA",
            },
            "color": Object {
              "active": "#171A1C",
              "disabled": "#ABB5BA",
              "hover": "#171A1C",
              "normal": "#171A1C",
            },
          },
          "tagStyles": Object {
            "backgroundColor": Object {
              "gray": "#E3E6E8",
              "green": "#D6F5E0",
              "yellow": "#FFEECC",
            },
            "color": "#171A1C",
          },
          "thStyles": Object {
            "backgroundColor": Object {
              "normal": "#FFFFFF",
            },
            "color": Object {
              "normal": "#73848C",
            },
            "previewColor": Object {
              "normal": "#4F4FFF",
            },
          },
        }
      }
    >
      <Brokers
        activeControllers={1}
        brokerCount={1}
        diskUsage={
          Array [
            Object {
              "brokerId": 1,
              "segmentCount": 64,
              "segmentSize": 60718,
            },
          ]
        }
        fetchBrokers={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        fetchClusterStats={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        inSyncReplicasCount={64}
        isFetched={true}
        offlinePartitionCount={0}
        onlinePartitionCount={64}
        outOfSyncReplicasCount={0}
        underReplicatedPartitionCount={0}
        version="1"
        zooKeeperStatus={1}
      >
        <div
          className="section"
        >
          <div
            className="metrics-box mb-2 is-flex"
          >
            <Styled(MetricsWrapper)
              title="Uptime"
            >
              <MetricsWrapper
                className="sc-bdfBQB ewAWCQ"
                title="Uptime"
              >
                <div
                  className="sc-bdfBQB ewAWCQ"
                >
                  <h5
                    className="is-7 has-text-weight-medium mb-2"
                  >
                    Uptime
                  </h5>
                  <div
                    className="indicatorsWrapper"
                  >
                    <Styled(Indicator)
                      label="Total Brokers"
                    >
                      <Indicator
                        className="sc-gsTEea fGiIVV"
                        label="Total Brokers"
                      >
                        <div
                          className="sc-gsTEea fGiIVV"
                        >
                          <div>
                            <p
                              className="is-size-8"
                            >
                              Total Brokers
                            </p>
                            1
                          </div>
                        </div>
                      </Indicator>
                    </Styled(Indicator)>
                    <Styled(Indicator)
                      label="Active Controllers"
                    >
                      <Indicator
                        className="sc-gsTEea fGiIVV"
                        label="Active Controllers"
                      >
                        <div
                          className="sc-gsTEea fGiIVV"
                        >
                          <div>
                            <p
                              className="is-size-8"
                            >
                              Active Controllers
                            </p>
                            1
                          </div>
                        </div>
                      </Indicator>
                    </Styled(Indicator)>
                    <Styled(Indicator)
                      label="Zookeeper Status"
                    >
                      <Indicator
                        className="sc-gsTEea fGiIVV"
                        label="Zookeeper Status"
                      >
                        <div
                          className="sc-gsTEea fGiIVV"
                        >
                          <div>
                            <p
                              className="is-size-8"
                            >
                              Zookeeper Status
                            </p>
                            <Styled(Tag)
                              color="green"
                              text="online"
                            >
                              <Tag
                                className="sc-dlfnuX jmVcT"
                                color="green"
                                text="online"
                              >
                                <p
                                  className="sc-dlfnuX jmVcT"
                                >
                                  online
                                </p>
                              </Tag>
                            </Styled(Tag)>
                          </div>
                        </div>
                      </Indicator>
                    </Styled(Indicator)>
                    <Styled(Indicator)
                      label="Version"
                    >
                      <Indicator
                        className="sc-gsTEea fGiIVV"
                        label="Version"
                      >
                        <div
                          className="sc-gsTEea fGiIVV"
                        >
                          <div>
                            <p
                              className="is-size-8"
                            >
                              Version
                            </p>
                            1
                          </div>
                        </div>
                      </Indicator>
                    </Styled(Indicator)>
                  </div>
                </div>
              </MetricsWrapper>
            </Styled(MetricsWrapper)>
            <Styled(MetricsWrapper)
              title="Partitions"
            >
              <MetricsWrapper
                className="sc-bdfBQB ewAWCQ"
                title="Partitions"
              >
                <div
                  className="sc-bdfBQB ewAWCQ"
                >
                  <h5
                    className="is-7 has-text-weight-medium mb-2"
                  >
                    Partitions
                  </h5>
                  <div
                    className="indicatorsWrapper"
                  >
                    <Styled(Indicator)
                      label="Online"
                    >
                      <Indicator
                        className="sc-gsTEea fGiIVV"
                        label="Online"
                      >
                        <div
                          className="sc-gsTEea fGiIVV"
                        >
                          <div>
                            <p
                              className="is-size-8"
                            >
                              Online
                            </p>
                            <span
                              className=""
                            >
                              64
                            </span>
                            <span
                              className="has-text-weight-light"
                            >
                               
                              of 
                              64
                            </span>
                          </div>
                        </div>
                      </Indicator>
                    </Styled(Indicator)>
                    <Styled(Indicator)
                      label="URP"
                      title="Under replicated partitions"
                    >
                      <Indicator
                        className="sc-gsTEea fGiIVV"
                        label="URP"
                        title="Under replicated partitions"
                      >
                        <div
                          className="sc-gsTEea fGiIVV"
                        >
                          <div
                            title="Under replicated partitions"
                          >
                            <p
                              className="is-size-8"
                            >
                              URP
                            </p>
                            0
                          </div>
                        </div>
                      </Indicator>
                    </Styled(Indicator)>
                    <Styled(Indicator)
                      label="In Sync Replicas"
                    >
                      <Indicator
                        className="sc-gsTEea fGiIVV"
                        label="In Sync Replicas"
                      >
                        <div
                          className="sc-gsTEea fGiIVV"
                        >
                          <div>
                            <p
                              className="is-size-8"
                            >
                              In Sync Replicas
                            </p>
                            64
                          </div>
                        </div>
                      </Indicator>
                    </Styled(Indicator)>
                    <Styled(Indicator)
                      label="Out of Sync Replicas"
                    >
                      <Indicator
                        className="sc-gsTEea fGiIVV"
                        label="Out of Sync Replicas"
                      >
                        <div
                          className="sc-gsTEea fGiIVV"
                        >
                          <div>
                            <p
                              className="is-size-8"
                            >
                              Out of Sync Replicas
                            </p>
                            0
                          </div>
                        </div>
                      </Indicator>
                    </Styled(Indicator)>
                  </div>
                </div>
              </MetricsWrapper>
            </Styled(MetricsWrapper)>
          </div>
        </div>
        <table
          className="table is-fullwidth"
        >
          <thead>
            <tr>
              <th>
                Broker
              </th>
              <th>
                Segment size (Mb)
              </th>
              <th>
                Segment Count
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              key="1"
            >
              <td>
                1
              </td>
              <td>
                <BytesFormatted
                  value={60718}
                >
                  <span>
                    59KB
                  </span>
                </BytesFormatted>
              </td>
              <td>
                64
              </td>
            </tr>
          </tbody>
        </table>
      </Brokers>
    </Component>
  </Router>
</StaticRouter>
`;
